langtools/test/tools/javac/proprietary/WarnImport.out
WarnImport.java:12:16: compiler.warn.sun.proprietary: sun.misc.VM
- compiler.err.warnings.and.werror
1 error
1 warning
